[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Maps/Gentilis.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/gentilis.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx0m.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx1m.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx2m.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Characters/Doubliksspr/dx3m.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Other/shadow_0.png" type="Texture" id=12]
[ext_resource path="res://Backgrounds/gentilisscreens1.png" type="Texture" id=13]
[ext_resource path="res://Backgrounds/gentilisscreens.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Cinematics/Begin/back1.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Player/GUICanvas.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Player/mouse.tscn" type="PackedScene" id=17]
[ext_resource path="res://Backgrounds/sprite156_0.png" type="Texture" id=18]
[ext_resource path="res://Sprites/GUI/Theme/theme.tres" type="Theme" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 6.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "marche",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Gentilis" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="fd" type="Sprite" parent="Node2D"]
position = Vector2( 510.293, 517.143 )
z_index = -10
texture = ExtResource( 2 )

[node name="player" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 511, 433 )
z_index = -20

[node name="Doublix" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 511, 569 )
frames = SubResource( 1 )
animation = "marche"
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="Node2D/Doublix"]
position = Vector2( 0, 28.2337 )
z_index = -2
texture = ExtResource( 12 )

[node name="screens" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 511.014, 516.905 )
frames = SubResource( 2 )
playing = true

[node name="blackwall" type="Sprite" parent="Node2D"]
position = Vector2( 505.816, 677.608 )
texture = ExtResource( 15 )

[node name="CanvasLayer" parent="." instance=ExtResource( 16 )]

[node name="mouse" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 522.698, 534.797 )
rotation = -0.0259099
scale = Vector2( 3.87564, 4.93944 )
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 397.188
margin_top = 418.52
margin_right = 1245.19
margin_bottom = 446.52
rect_scale = Vector2( 0.267019, 0.324102 )
theme = ExtResource( 19 )
text = "Bientôt, Veget, Progfer, Doublix, Doobliks et Tog seront de nouveau des héros..."

[node name="Timer2" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
